fix black borders on smaller screens

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -107,17 +107,25 @@ option {
 	z-index: 1100;
 }
 
-@media (min-aspect-ratio: 16/9) {
-	.video-background {
+.video-background iframe.title {
+    top: -30px !important; /* Hide the video title */
+}
+
+/* @media (min-aspect-ratio: 16/9) {
+	.video-background{
 		height: 300%;
 		top: -100%;
 	}
-}
+} */
 
 @media (max-aspect-ratio: 16/9) {
-	.video-background {
-		width: 300%;
-		left: -100%;
+	.video-background iframe {
+		width: 177.78vh !important;
+		height: 120% !important;
+		/* add padding bottom */
+		top: -10%;
+		/* center it */
+		/* left: -38.89% !important; */
 	}
 }
 
@@ -125,5 +133,10 @@ option {
 	.video-background {
 		height: 100%;
 		top: 0;
+	}
+
+	/* fix the full screen the left very left */
+	.video-background iframe {
+		left: 0 !important;
 	}
 }
